feat(vr): Week 7 OpenXR runtime integration
Add VR subsystem to compositor with OpenXR lifecycle management:

Rust compositor (compositor/src/vr/):
- openxr_state.rs: Full VrState with OpenXR session lifecycle
  (IDLE -> READY -> SYNCHRONIZED -> VISIBLE -> FOCUSED),
  Entry loading, Instance creation with extension negotiation
  (khr_opengl_enable, ext_eye_gaze_interaction, ext_hand_tracking),
  HMD system discovery, session recovery with retry logic
- frame_timing.rs: Rolling frame timing statistics with p50/p95/p99
  percentile computation over configurable window, s-expression
  IPC formatting, missed frame detection against budget
- stub.rs: No-op VrState for non-VR builds (s390x, CI without OpenXR)
- mod.rs: Feature-gated module routing (#[cfg(feature = "vr")])
- Cargo.toml: vr feature flag, openxrs 0.19 optional dependency

Compositor integration:
- state.rs: VrState field in EwwmState, initialized on startup
- main.rs: pub mod vr declaration
- ipc/dispatch.rs: vr-status (live session/HMD/frame-stats query),
  vr-set-reference-space (local/stage/view), vr-restart,
  vr-get-frame-timing commands; dynamic VR feature flag in hello

Emacs side (lisp/vr/ewwm-vr.el):
- Session state tracking, HMD info, frame timing state variables
- IPC event handlers: vr-session-state, vr-system-discovered,
  vr-frame-stats with automatic registration into event dispatch
- Mode-line indicator: [VR:FOCUSED], [VR:HEADLESS], [VR:IDLE], etc.
- Interactive commands: ewwm-vr-status, ewwm-vr-set-reference-space,
  ewwm-vr-restart, ewwm-vr-frame-timing (dedicated timing buffer)
- Defcustoms: reference-space, mode-line toggle, stats interval
- Session state change hook for user extensions
- Wired into ewwm.el init/exit lifecycle

Tests: 217 passing (45 new)
- test/ewwm-vr-test.el: 30 tests covering variables, commands,
  IPC event handling, mode-line formatting, teardown, reference
  space validation, event registration idempotency
- test/week7-integration-test.el: 15 tests verifying module

--- a/compositor/Cargo.toml
+++ b/compositor/Cargo.toml
@@ -10,6 +10,10 @@ license = "GPL-3.0-or-later"
 name = "ewwm-compositor"
 path = "src/main.rs"
 
+[features]
+default = []
+vr = ["openxrs"]
+
 [dependencies]
 smithay = { version = "0.7", default-features = false, features = [
     "backend_drm",
@@ -31,6 +35,9 @@ clap = { version = "4", features = ["derive"] }
 anyhow = "1"
 lexpr = "0.2"
 libc = "0.2"
+
+# VR: OpenXR runtime integration (behind "vr" feature flag)
+openxrs = { version = "0.19", optional = true }
 
 [dev-dependencies]
 wayland-client = "0.31"
