fix(ci): resolve openxrs crate name and Rocky Linux deps
- Fix Cargo.toml: openxrs is a rename of the real `openxr` crate
  (the crate was listed as `openxrs` v0.19 which doesn't exist on
  crates.io; use package rename to real `openxr` v0.21)
- Regenerate Cargo.lock with all dependencies including optional openxr
- Rocky Linux workflow: enable CRB repo, make libseat-devel optional

--- a/.github/workflows/rocky-test.yml
+++ b/.github/workflows/rocky-test.yml
@@ -23,13 +23,15 @@ jobs:
       - name: Install build dependencies
         run: |
           dnf install -y epel-release
+          dnf config-manager --set-enabled crb
           dnf install -y \
             gcc gcc-c++ make cmake pkg-config \
             wayland-devel mesa-libEGL-devel mesa-libGL-devel \
-            libinput-devel libxkbcommon-devel libseat-devel \
-            libdrm-devel \
+            libinput-devel libxkbcommon-devel libdrm-devel \
             emacs-nox \
             curl
+          # libseat-devel may not be in default repos; install if available
+          dnf install -y libseat-devel 2>/dev/null || true
 
       - name: Install Rust
         run: |
